refacor : api 테스트 후 일부 부분 수정